Avoid NPE on optional seetting